added /move/ support to api
